--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -5,11 +5,11 @@ This tagline will appear in your homepage
 <section class="grid-container usa-section usa-prose">
   <div class="grid-row grid-gap">
     <div class="tablet:grid-col-4">
-      <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">A tagline highlights your approach</h2>
+      <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">Med School for State Officers.</h2>
     </div>
     <div class="tablet:grid-col-8 usa-prose">
-      <p>The tagline should inspire confidence and interest, focusing on the value that your overall approach offers to your audience. Use a heading typeface and keep your tagline to just a few words, and don’t confuse or mystify.</p>
-      <p>Use the right side of the grid to explain the tagline a bit more. What are your goals? How do you do your work? Write in the present tense, and stay brief here. People who are interested can find details on internal pages.</p>
+      <p>When you get down to it, doctors just want you to be healthy.</p>
+      <p>This course will help you develop tactics and strategies for getting your patients (states, vendors, and their projects) to come in for checkups more often, so you can help keep them healthy, on track, and delivering success.</p>
     </div>
   </div>
 </section>
