Adding in more helper scripts.
The link database can now be managed as a single file in the _data
directory, and the linkref plugin can reach into it and pull data out
based on UID. This way, we can create a "database" of resources, and
both 1) render it out as a page from Liquid, and 2) reach into it from
the plugin for rendering links throughout the site.

Did this so as to consolidate links. Managing links in a site has always
bothered me, and this seems like a good/quick solution.

Need to start working in branches.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,11 @@
         <div class="tablet:grid-col">
           <div class="logo-links">
             <a class="footer-logo media_link" href="https://18f.gsa.gov">
-              {% asset logo-img.png width="50" alt="Agency logo" %}
+              {% asset cms-logo.png width="50" alt="Agency logo" %}
             </a>
           </div>
         </div>
+        <!-- 
         <div class="tablet:grid-col"></div>
         <div class="tablet:grid-col">
           <ul class="add-list-reset">
@@ -24,6 +25,7 @@
             <li>Footer link</li>
           </ul>
         </div>
+        -->
       </div>
     </div>
   </div>
