--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -1,13 +1,12 @@
-{% comment %} 
-This tagline will appear in your homepage
-{% endcomment %}
-
 <section class="grid-container usa-section usa-prose">
   <div class="grid-row grid-gap">
     <div class="tablet:grid-col-4">
-      <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">Med School for State Officers.</h2>
+      {% asset small-health-rubric.png %}
     </div>
     <div class="tablet:grid-col-8 usa-prose">
+      <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">
+        Med School for State Officers.
+      </h2>
       <p>When you get down to it, doctors just want you to be healthy.</p>
       <p>This course will help you develop tactics and strategies for getting your patients (states, vendors, and their projects) to come in for checkups more often, so you can help keep them healthy, on track, and delivering success.</p>
     </div>
