--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,23 +9,31 @@
             </a>
           </div>
         </div>
-        <!-- 
+
         <div class="tablet:grid-col"></div>
         <div class="tablet:grid-col">
           <ul class="add-list-reset">
-            <li>Footer link</li>
-            <li>Footer link</li>
-            <li>Footer link</li>
+            <li><a href="{{site.baseurl}}/">Home</a></li>
+            {% assign overviews = site.courses | where: "visibility", "Hidden" | sort: "course" %}
+            {% for c in overviews %}
+            <li><a href="{{ c.url | prepend: site.baseurl }}">{{ c.title }}</a></li>
+            {% endfor %}
           </ul>
         </div>
         <div class="tablet:grid-col">
-          <ul class="add-list-reset">
-            <li>Footer link</li>
-            <li>Footer link</li>
-            <li>Footer link</li>
-          </ul>
+          <p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
+            <a rel="license"
+               href="http://creativecommons.org/publicdomain/zero/1.0/">
+              <img src="https://licensebuttons.net/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" />
+            </a>
+            <br />
+            To the extent possible under law,
+            <a rel="dct:publisher"
+               href="https://18f.gsa.gov/">
+              <span property="dct:title">18F / TTS / GSA</span></a>
+            has waived all copyright and related or neighboring rights to this work.
+          </p>
         </div>
-        -->
       </div>
     </div>
   </div>
