--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -38,4 +38,5 @@ site, this is the place to do it.
   <!-- CSS
     ================================================== -->
   {% asset index.scss %}
+  {% asset rubric.css %}
 </head>
