Attempting to check Netlify config.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
           <ul class="add-list-reset">
             <li><a href="{{site.baseurl}}/">Home</a></li>
             <li><a href="{{site.baseurl}}/rubric/">Health Rubric</a></li>
-            <li><a href="{{site.baseurl}}/tracker/">Health Tracker</a></li>
+            <li><a href="https://airtable.com/shrsMy2dpZDPbWTXW">Health Tracker</a></li>
           </ul>
         </div>
         <div class="tablet:grid-col">
