Incomplete Outcomes lesson, checking in...
1. Dragbox JS and CS for the outcomes lesson.
2. Additional resources for the lesson.
3. Improved link plugin.

The lesson isn't done yet, but I want to check it in so nothing gets
lost.

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -35,11 +35,15 @@ site, this is the place to do it.
   <link rel="shortcut icon" type="image/ico" href="{% asset favicons/favicon.ico @path %}">
   <link rel="icon" type="image/png" href="{% asset favicons/favicon.png @path %}">
   <link rel="icon" type="image/png" sizes="192x192" href="{% asset favicons/favicon-192.png @path %}">
- 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.min.js" integrity="sha512-OyrI249ZRX2hY/1CAD+edQR90flhuXqYqjNYFJAiflsKsMxpUYg5kbDDAVA8Vp0HMlPG/aAl1tFASi1h4eRoQw==" crossorigin="anonymous"></script>  <!-- CSS
-    ================================================== -->
+
+  <!-- SCRIPTS ================================================== -->
+  <!-- FIXME MCJ: These have a place in the uswds-jekyll framework -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.min.js" integrity="sha512-OyrI249ZRX2hY/1CAD+edQR90flhuXqYqjNYFJAiflsKsMxpUYg5kbDDAVA8Vp0HMlPG/aAl1tFASi1h4eRoQw==" crossorigin="anonymous"></script>  
+  {% asset dragonfly.js %}
+  <!-- CSS ================================================== -->
   {% asset index.scss %}
   {% asset rubric.css %}
+  {% asset dragbox.css %}
 </head>
 
 
