--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="grid-row padding-3">
         <div class="tablet:grid-col">
           <div class="logo-links">
-            <a class="footer-logo media_link" href="https://18f.gsa.gov">
+            <a class="footer-logo media_link" href="https://www.cms.gov/">
               {% asset cms-logo.png width="50" alt="Agency logo" %}
             </a>
           </div>
