Handling multiple lessons on one ID
If I have multiple lessons for (say) id1.3, they all need to appear on
the course overview page. This might not be the right way to do this...
perhaps the course overview should not be rubric dimensions, but true
UIDs to the content.

This, in truth, is because the data model for the rubric lessons is
broken. We should consider fixing it, so each rubric lesson page has a
UID.

--- a/_includes/course_lesson_list.html
+++ b/_includes/course_lesson_list.html
@@ -33,21 +33,26 @@
                 {% endif %}
             {% endfor %}
         {% endif %}
-    {% if lesson != 0 %}
-    {% if lesson.indicator == "admin" %}
-    {% assign color = "#aaaaaa" %}
-    {% else %}
-        {% assign color="#1d3557" %}
-    {% endif %}
-    <tr>
-        <td>
-            <span class="courseslug" style="background: {{ color }};">{% include indicator slug=lesson.indicator %}</span> 
-        </td>
-        <td> 
-               <a href="{{ lesson.url | prepend: site.baseurl }}">{% if lesson.indicator != "admin" %}Lesson {{ lesson.lesson }} - {% endif %}{{ lesson.title }}</a>
-        </td>
-    </tr>
-    {% endif %}
+        {% if lesson != 0 %}
+            {% if lesson.indicator == "admin" %}
+                {% assign color = "#aaaaaa" %}
+            {% else %}
+                {% assign color="#1d3557" %}
+            {% endif %}
+            {% comment %} Find all the courses that match this id {% endcomment %}
+            {% for lesson in site.rubric %}
+                {% if lesson.dimension == id %}
+                    <tr>
+                        <td>
+                            <span class="courseslug" style="background: {{ color }};">{% include indicator slug=lesson.indicator %}</span> 
+                        </td>
+                        <td> 
+                            <a href="{{ lesson.url | prepend: site.baseurl }}">{% if lesson.indicator != "admin" %}Lesson {{ lesson.lesson }} - {% endif %}{{ lesson.title }}</a>
+                        </td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
     {% endfor %}
     </table>
     
