Adding in "Course Six," cleaning up metadata.
Seems like a big commit. It isn't.

1. Adding in the stub for the "choosing open source" lesson.

2. Cleaned up metadata in all of the rubric lessons. There's a lot of
   cruft that was hanging around from Netlify, which is now gone. So, I
removed all of the header info that wasn't needed.

3. Updated all rubric dimension includes to use the page variable, so
   that it was less fragile.

--- a/_assets/css/rubric.css
+++ b/_assets/css/rubric.css
@@ -4,6 +4,12 @@
     
 }
 
+/*
+.tiprow:hover{
+    background: rgba(106, 106, 185, 0.623);
+}
+*/
+
 .section:nth-of-type(odd) {
     background: #eaeaea;
 }
