--- a/_includes/rubrictopagelink.html
+++ b/_includes/rubrictopagelink.html
@@ -7,7 +7,11 @@
 {% endfor %}
 
 {% assign length = (urls | size) %}
-{% for url in urls %}
-    <small><a href="{{ url | prepend: site.baseurl }}">{{ dimension.id }}{%- if length > 1 -%}-{{ forloop.index }}{%- endif -%}</a></small>
-    {%- unless forloop.last -%},<br>{%- endunless -%}
-{% endfor %}
+{%- if length > 0 -%}
+    {% for url in urls %}
+        <small><a href="{{ url | prepend: site.baseurl }}">{{ dimension.id }}{%- if length > 1 -%}-{{ forloop.index }}{%- endif -%}</a></small>
+        {%- unless forloop.last -%},<br>{%- endunless -%}
+    {% endfor %}
+{%- else -%}
+    <small>{{ dimension.id }}</small>
+{%- endif -%}
