--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <div class="tablet:grid-col">
           <div class="logo-links">
             <a class="footer-logo media_link" href="https://www.cms.gov/">
-              {% asset cms-logo.png width="50" alt="Agency logo" %}
+              <img src="{{ '/assets/images/cms-logo.png' | prepend: site.baseurl }}" width="50" alt="Agency logo" %}
             </a>
           </div>
         </div>
