--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@ This appears at the top of the page letting the user know it's an official gover
       <header class="usa-banner__header">
         <div class="usa-banner__inner">
           <div class="grid-col-auto">
-            {% asset us_flag_small.png class="usa-banner__header-flag" alt="U.S. flag" %}
+            <img src="{{ '/assets/uswds-2.9.0/img/us_flag_small.png' | prepend: site.baseurl }}" 
+                 class="usa-banner__header-flag" alt="U.S. flag">
           </div>
           <div class="grid-col-fill tablet:grid-col-auto">
             <p class="usa-banner__header-text">An official website of the United States government</p>
@@ -23,7 +24,8 @@ This appears at the top of the page letting the user know it's an official gover
       <div class="usa-banner__content usa-accordion__content" id="gov-banner">
         <div class="grid-row grid-gap-lg">
           <div class="usa-banner__guidance tablet:grid-col-6">
-            {% asset icon-dot-gov.svg class="usa-banner__icon usa-media-block__img" alt="Dot gov" %}
+            <img src="{{ '/assets/uswds-2.9.0/img/icon-dot-gov.svg' | prepend: site.baseurl }}" 
+                 class="usa-banner__icon usa-media-block__img" alt="Dot gov">
             <div class="usa-media-block__body">
               <p>
                 <strong>The .gov means it’s official.</strong>
@@ -34,7 +36,8 @@ This appears at the top of the page letting the user know it's an official gover
             </div>
           </div>
           <div class="usa-banner__guidance tablet:grid-col-6">
-            {% asset icon-https.svg class="usa-banner__icon usa-media-block__img" alt="Https" %}
+            <img src=" {{ '/assets/uswds-2.9.0/img/icon-https.svg' | prepend: site.baseurl }}" 
+                 class="usa-banner__icon usa-media-block__img" alt="Https">
             <div class="usa-media-block__body">
               <p>
                 <strong>The site is secure.</strong>
