--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -21,29 +21,25 @@ site, this is the place to do it.
   <meta name="description" content="{{site.description}}">
   <meta property="og:description" content="{{site.description}}">
 
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@{{site.twitter}}" />
-  <meta name="twitter:title" content="{{site.title}}" />
-  <meta name="twitter:description" content="{{site.description}}" />
-
   <meta property="og:type" content="article">
   <link rel="canonical" href="{{ page.url | absolute_url }}" />
   <meta property="og:url" content="{{ page.url | absolute_url }}" />
   <!-- Favicons
     ================================================== -->
-  <!-- 128x128 -->
-  <link rel="shortcut icon" type="image/ico" href="{% asset favicons/favicon.ico @path %}">
-  <link rel="icon" type="image/png" href="{% asset favicons/favicon.png @path %}">
-  <link rel="icon" type="image/png" sizes="192x192" href="{% asset favicons/favicon-192.png @path %}">
+  <!-- 128x128 
+  <link rel="shortcut icon" type="image/ico" href="FIXME">
+  <link rel="icon" type="image/png" href="FIXME">
+  <link rel="icon" type="image/png" sizes="192x192" href="FIXME">
+  -->
 
   <!-- SCRIPTS ================================================== -->
-  <!-- FIXME MCJ: These have a place in the uswds-jekyll framework -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.min.js" integrity="sha512-OyrI249ZRX2hY/1CAD+edQR90flhuXqYqjNYFJAiflsKsMxpUYg5kbDDAVA8Vp0HMlPG/aAl1tFASi1h4eRoQw==" crossorigin="anonymous"></script>  
+  <script src="{{ '/assets/js/luxon.min.js' | prepend: site.baseurl }}"></script>  
 
   <!-- CSS ================================================== -->
-  {% asset index.scss %}
-  {% asset rubric.css %}
-  {% asset dragbox.css %}
+  <link rel="stylesheet" href="{{ '/assets/uswds-2.9.0/css/uswds.min.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ '/assets/css/rubric.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ '/assets/css/dragbox.css' | prepend: site.baseurl }}">
+
 </head>
 
 
@@ -59,7 +55,7 @@ site, this is the place to do it.
         document.getElementById(id).innerHTML = minutes + ":" + seconds;
 
         if (--timer < 0) {
-           var audio = new Audio("{{ '/audio/bing-bong.mp3' | prepend: site.baseurl }}");
+           var audio = new Audio("{{ '/assets/audio/bing-bong.mp3' | prepend: site.baseurl }}");
            document.getElementById(id).innerHTML = "STOP";
            audio.play();
            clearInterval(thisTimer);
