Removes asset tag.

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -23,5 +23,4 @@
 </script>
 {% endif %}
 
-{% asset uswds.min.js %}
-{% asset app.js %}
+<script type="text/javascript" src="{{ '/assets/uswds-2.9.0/js/uswds.min.js' | prepend: site.baseurl }}"></script>
