Removes asset tags.

--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -1,7 +1,7 @@
 <section class="grid-container usa-section usa-prose">
   <div class="grid-row grid-gap">
     <div class="tablet:grid-col-4">
-      {% asset small-health-rubric.png %}
+      <img src="{{ '/assets/images/small-health-rubric.png' | prepend: site.baseurl }}" alt="Small version of the rubric."/>
     </div>
     <div class="tablet:grid-col-8 usa-prose">
       <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">
