--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -36,7 +36,7 @@ site, this is the place to do it.
   <script src="{{ '/assets/js/luxon.min.js' | prepend: site.baseurl }}"></script>  
 
   <!-- CSS ================================================== -->
-  <link rel="stylesheet" href="{{ '/assets/uswds-2.10.0/css/uswds.min.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ '/assets/uswds-' | append: site.uswds_version | append: '/css/uswds.min.css' | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ '/assets/css/rubric.css' | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ '/assets/css/dragbox.css' | prepend: site.baseurl }}">
 
