--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -23,4 +23,4 @@
 </script>
 {% endif %}
 
-<script type="text/javascript" src="{{ '/assets/uswds-2.9.0/js/uswds.min.js' | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ '/assets/uswds-' | append: site.uswds_version | append: '/js/uswds.min.js' | prepend: site.baseurl }}"></script>
