Numbering, useless metadata
Removed useless metadata from the top of pages. These were removed in
"simplify," but not in staging. The merge process brought it back.

I'm increasingly confident there was a better way to do the merge. Or,
the branches should not have been allowed to be so far apart. That was
on me.

Fixed how the rubric linking to pages works, so now it will catch one
row having multiple lessons, and visa-versa.

We have one lesson left to link in.

--- a/_includes/rubrictopagelink.html
+++ b/_includes/rubrictopagelink.html
@@ -1,7 +1,7 @@
 {% comment %} passes in the id {% endcomment %}
 {% assign urls = '' | split: ',' %}
 {% for page in site.rubric %}
-    {% if page.dimension == include.id %}
+    {% if page.dimension contains include.id %}
         {% assign urls = urls | push: page.url %}
     {% endif %}
 {% endfor %}
@@ -10,7 +10,7 @@
 {%- if length > 0 -%}
     {% for url in urls %}
         <small><a href="{{ url | prepend: site.baseurl }}">{{ dimension.id }}{%- if length > 1 -%}-{{ forloop.index }}{%- endif -%}</a></small>
-        {%- unless forloop.last -%},<br>{%- endunless -%}
+        {%- unless forloop.last -%}{{ include.sep }}{%- endunless -%}
     {% endfor %}
 {%- else -%}
     <small>{{ dimension.id }}</small>
