Normalizing lesson layouts.
Based on noodling over a ticket this afternoon, it is clear that lessons
could have a more normalized layout.

Given that we have a blurb at the top of every lesson (the "overview"),
and that overview is already used on the overview page, it became
apparent that this could be used as the intro to the lesson, too.

Now, the "lesson" layout includes the title of the lesson, the
overview, a table of contents, and the rubric dimension. This way, the
lessons themselves are just the lesson. This will help with various
things looking forward.

I've made the requisite changes to the supporting scripts, and have
moved course one over to the "lesson" layout. I'll do the other courses
next, as it really simplifies things.

--- a/_includes/airtable-post.html
+++ b/_includes/airtable-post.html
@@ -1,6 +1,8 @@
-## Wrapup (5m, solo)
+<h2>Wrapup (5m, solo)</h2>
 
-Take a few minutes to share your reflections on this lesson. 
+<p>
+    Take a few minutes to share your reflections on this lesson. 
+</p>
 
 <div class="grid-row" style="margin-top: 2em;" >
     <div class="grid-col-12">
