Adding CSS class for screen reader support
The rubric page now does the following:

1. The DIV-based version of the rubric is now invisible to screen
   readers.
2. On the same page, the entire *text-based* rubric is rendered.
2a. The text-based rubric is invisible to people who are *not* using a
screen reader.

This way, when a screen reader comes upon this content, what the reader
gets is content structured as plain text, with good semantic headings.
Visual users will see the table. It is possible for users to
intentionally flip to the text-only view.

--- a/assets/css/rubric.css
+++ b/assets/css/rubric.css
@@ -1,3 +1,33 @@
+/* From https://accessibility.18f.gov/hidden-content/ */
+/* This is used on the rubric to *hide* the div-based version
+   from screen readers, and a plain-text version will be presented instead.
+   The plain text version is *just text*, and uses semantic layout to provide
+   context/navigation. The "pretty" version is just that... it is more suitable
+   for "print layout" than what a screen reader would enjoy.
+*/
+.sr-only {
+    border: 0; 
+    clip: rect(0 0 0 0); 
+    height: 1px; 
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+
+/* From https://css-tricks.com/inclusively-hidden/ */
+/* 
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
+}
+*/
 
 :root {
     --danger-color: #F65235;
