Adding in the shared experience prompt.
This still needs to be added to all of the courses. Do that when
normalizing course layouts.

--- a/assets/css/rubric.css
+++ b/assets/css/rubric.css
@@ -20,6 +20,7 @@
    be referenced as variables. Also... may need to 
    change to accommodate vision differences. */
 /* High contrast colors
+    https://venngage.com/blog/color-blind-friendly-palette/
 :root {
     --danger-color: #601A4A;
     --warning-color: #EE442F;
