Normalized on lesson layout.
An easy change. Remove a bit from the top of every page, and let the
template do the rest.

Had to fix the layout to work for lessons with multiple rubric
dimensions.

--- a/_layouts/lesson.html
+++ b/_layouts/lesson.html
@@ -7,7 +7,9 @@ layout: widepage
 
 {% include toc.html html=content h_max=2 %}
 
-{% include rubric dimension=page.dimension %}
+{% for dim in page.dimension %}
+    {% include rubric dimension=dim %}
+{% endfor %}
 
 {{ content }}
 
